[gd_scene load_steps=16 format=3 uid="uid://bs1uuivbvobkg"]

[ext_resource type="Texture2D" uid="uid://c52fdjolycenn" path="res://Assets/Cow.png" id="1_sao73"]
[ext_resource type="Script" path="res://Scripts/cow.gd" id="1_vx6dw"]
[ext_resource type="PackedScene" uid="uid://b5m053qkdpat1" path="res://Scene/fart.tscn" id="2_3f5fw"]
[ext_resource type="PackedScene" uid="uid://dfj2ch1dewk34" path="res://Scene/full_diper.tscn" id="3_excpx"]
[ext_resource type="Texture2D" uid="uid://bh6gu30cbfsm8" path="res://Assets/EmptyDiper.png" id="3_fd08k"]
[ext_resource type="Script" path="res://Scripts/ch4timer.gd" id="4_nv3ti"]

[sub_resource type="AtlasTexture" id="AtlasTexture_u00co"]
atlas = ExtResource("1_sao73")
region = Rect2(0, 0, 24, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj6l0"]
atlas = ExtResource("1_sao73")
region = Rect2(24, 0, 24, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_dn7fo"]
atlas = ExtResource("1_sao73")
region = Rect2(48, 0, 24, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_ui217"]
atlas = ExtResource("1_sao73")
region = Rect2(0, 14, 24, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_1b3mn"]
atlas = ExtResource("1_sao73")
region = Rect2(24, 14, 24, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6psi"]
atlas = ExtResource("1_sao73")
region = Rect2(48, 14, 24, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_70kss"]
atlas = ExtResource("1_sao73")
region = Rect2(0, 28, 24, 14)

[sub_resource type="SpriteFrames" id="SpriteFrames_n2is4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u00co")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj6l0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dn7fo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ui217")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1b3mn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6psi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70kss")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7jeq5"]
radius = 7.0

[node name="Cow" type="Area2D" groups=["cow"]]
script = ExtResource("1_vx6dw")
Fart = ExtResource("2_3f5fw")
FullDyper = ExtResource("3_excpx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_n2is4")
autoplay = "default"
frame = 4
frame_progress = 0.73355

[node name="EmptyDiper" type="Sprite2D" parent="."]
visible = false
position = Vector2(9, -1)
rotation = -1.57079
texture = ExtResource("3_fd08k")
region_enabled = true
region_rect = Rect2(0, -0.149252, 11, 7.14925)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 0)
shape = SubResource("CircleShape2D_7jeq5")

[node name="ch4Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true
script = ExtResource("4_nv3ti")

[node name="FartPoint" type="Marker2D" parent="."]
position = Vector2(11, -5)

[node name="fullTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="ch4Timer" to="." method="_on_ch_4_timer_timeout"]
[connection signal="timeout" from="fullTimer" to="." method="_on_full_timer_timeout"]
